test/spec_vectors/memory/fail/module_15.wat
(module (func (drop (i32.load8_s (i32.const 0)))))